unpackaged/main/default/objects/Account/fields/Account_Balance_JSON__c.field-meta.xml
<CustomField>
    <fullName>Account_Balance_JSON__c</fullName>
    <label>Account Balance JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>