unpackaged/main/default/objects/Account/fields/Account_Budget__c.field-meta.xml
<CustomField>
    <fullName>Account_Budget__c</fullName>
    <description>The total budget of the Account</description>
    <formula>Budget_F_T__c +  Budget_Stores__c +  Budget_TC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>