unpackaged/main/default/objects/Account/fields/Account_Credit_Option__c.field-meta.xml
<CustomField>
    <fullName>Account_Credit_Option__c</fullName>
    <description>Options on Credit on the Account</description>
    <label>Account Credit Option</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SoftLimit</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>HardLimit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>