unpackaged/main/default/objects/Account/fields/Account_Identification__c.field-meta.xml
<CustomField>
    <fullName>Account_Identification__c</fullName>
    <externalId>true</externalId>
    <label>Account Identification</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>