unpackaged/main/default/objects/Account/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <description>Account owner&#39;s full name</description>
    <formula>Owner.FirstName + &#39; &#39; + Owner.LastName</formula>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>