unpackaged/main/default/objects/Account/fields/Account_Owner_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Location_Name__c</fullName>
    <description>Used in reporting</description>
    <formula>Owner.Location_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Location Name</label>
    <type>Text</type>
</CustomField>