unpackaged/main/default/objects/Account/fields/Account_Owner_Sales_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Sales_Id__c</fullName>
    <description>Populated when account owner has a Sales External Id on their user record. Used for providing transfer detail reports to commercial accountant</description>
    <label>Account Owner Sales Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>