unpackaged/main/default/objects/Account/fields/Account_Transferrable__c.field-meta.xml
<CustomField>
    <fullName>Account_Transferrable__c</fullName>
    <formula>IF( ISPICKVAL(Transfer_approval_status__c , &#39;Submitted for approval&#39;) || ISPICKVAL(Pricing_Assignment_Status__c , &#39;Pending Approval&#39;) , &#39;No&#39;, &#39;Yes&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>There are accounts under approval.</inlineHelpText>
    <label>Account Transferrable</label>
    <type>Text</type>
</CustomField>