unpackaged/main/default/objects/Account/fields/Active_PowerPass_Cards__c.field-meta.xml
<CustomField>
    <fullName>Active_PowerPass_Cards__c</fullName>
    <label>Active PowerPass Cards</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>