unpackaged/main/default/objects/Account/fields/Admin_Code__c.field-meta.xml
<CustomField>
    <fullName>Admin_Code__c</fullName>
    <description>Used by Admin Only</description>
    <label>Admin Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>