unpackaged/main/default/objects/Account/fields/ANZSIC_Class__c.field-meta.xml
<CustomField>
    <fullName>ANZSIC_Class__c</fullName>
    <label>ANZSIC Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>