unpackaged/main/default/objects/Account/fields/ANZSIC_Code__c.field-meta.xml
<CustomField>
    <fullName>ANZSIC_Code__c</fullName>
    <label>ANZSIC Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>