unpackaged/main/default/objects/Account/fields/API_Callout_Retry_Maxed_Out__c.field-meta.xml
<CustomField>
    <fullName>API_Callout_Retry_Maxed_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>API Callout Retry Maxed Out?</label>
    <type>Checkbox</type>
</CustomField>