unpackaged/main/default/objects/Account/fields/Application_Id__c.field-meta.xml
<CustomField>
    <fullName>Application_Id__c</fullName>
    <description>Id field that is applied to Apprentice Accounts when they register for Power Pass</description>
    <externalId>true</externalId>
    <label>Application Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>