unpackaged/main/default/objects/Account/fields/Apprentice__c.field-meta.xml
<CustomField>
    <fullName>Apprentice__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Field hidden for users. Used only by Integration / System Admin to create apprentice accounts.</inlineHelpText>
    <label>Apprentice</label>
    <type>Checkbox</type>
</CustomField>