unpackaged/main/default/objects/Account/fields/Apprentice_Fields_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Apprentice_Fields_Last_Updated__c</fullName>
    <description>Used in scheduled flow to assign apprentice follow up task</description>
    <label>Apprentice Fields Last Updated</label>
    <type>Date</type>
</CustomField>