unpackaged/main/default/objects/Account/fields/Apprentice_Training_Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>Apprentice_Training_Contract_ID__c</fullName>
    <description>Reference ID for the Contract</description>
    <externalId>true</externalId>
    <label>Apprentice/Training Contract ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>