unpackaged/main/default/objects/Account/fields/Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date__c</fullName>
    <description>Date when the account is approved</description>
    <label>Approval Date</label>
    <type>Date</type>
</CustomField>