unpackaged/main/default/objects/Account/fields/Assigned_Area__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Area__c</fullName>
    <formula>Assigned_Store__r.Operations_Area_Code__c</formula>
    <label>Assigned Area</label>
    <type>Text</type>
</CustomField>