unpackaged/main/default/objects/Account/fields/Assigned_Store__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Assigned Store of a trade Specialist User</description>
    <label>Assigned Store</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>Accounts (Assigned Store)</relationshipLabel>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>