unpackaged/main/default/objects/Account/fields/Batch_Update__c.field-meta.xml
<CustomField>
    <fullName>Batch_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Update of legacy data</description>
    <label>Batch Update</label>
    <type>Checkbox</type>
</CustomField>