unpackaged/main/default/objects/Account/fields/BCI_Firm_Id__c.field-meta.xml
<CustomField>
    <fullName>BCI_Firm_Id__c</fullName>
    <externalId>true</externalId>
    <label>BCI Firm Id</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>