unpackaged/main/default/objects/Account/fields/Beaumont_Tiles_Account__c.field-meta.xml
<CustomField>
    <fullName>Beaumont_Tiles_Account__c</fullName>
    <label>Beaumont Tiles Account</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Franchise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>