unpackaged/main/default/objects/Account/fields/Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address__c</fullName>
    <description>This field is created for Account Transfer functionality.
This field is being used in Bulk_Account_Transfer_Field__mdt.</description>
    <formula>BillingStreet  + &#39; &#39; + BillingCity  + &#39; &#39; +  BillingCountry  + &#39; &#39; + BillingState  + &#39; &#39; +  BillingPostalCode</formula>
    <label>Billing Address</label>
    <type>Text</type>
</CustomField>