unpackaged/main/default/objects/Account/fields/Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Billing_City__c</fullName>
    <description>This field is created for Account Transfer functionality.
This field is being used in Bulk_Account_Transfer_Field__mdt.</description>
    <formula>BillingCity</formula>
    <label>Billing City</label>
    <type>Text</type>
</CustomField>