unpackaged/main/default/objects/Account/fields/Brand_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Brand_Preferences__c</fullName>
    <description>Preference on the brands of the Account</description>
    <label>Brand Preferences</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>