unpackaged/main/default/objects/Account/fields/Budget_F_T__c.field-meta.xml
<CustomField>
    <fullName>Budget_F_T__c</fullName>
    <description>The Budget F&amp;T</description>
    <formula>(Last_YTD_Sales_F_T__c *  Secondary_Segment__r.Segment_Growth_Target__c) + Last_YTD_Sales_F_T__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget - F&amp;T</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>