unpackaged/main/default/objects/Account/fields/Budget_Stores__c.field-meta.xml
<CustomField>
    <fullName>Budget_Stores__c</fullName>
    <description>Store Budget on the Account</description>
    <formula>(Last_YTD_Sales_Stores__c *  Secondary_Segment__r.Segment_Growth_Target__c) + Last_YTD_Sales_Stores__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget - Stores</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>