unpackaged/main/default/objects/Account/fields/Budget_TC__c.field-meta.xml
<CustomField>
    <fullName>Budget_TC__c</fullName>
    <description>TC Budget of the Account</description>
    <formula>(Last_YTD_Sales_TC__c * Secondary_Segment__r.Segment_Growth_Target__c)+ Last_YTD_Sales_TC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget - TC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>