unpackaged/main/default/objects/Account/fields/Bulk_Account_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Account_Transfer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check if this account has been transferred using Bulk Account Transfer</description>
    <label>Bulk Account Transfer</label>
    <type>Checkbox</type>
</CustomField>