unpackaged/main/default/objects/Account/fields/Business_Determined_Call_Reason__c.field-meta.xml
<CustomField>
    <fullName>Business_Determined_Call_Reason__c</fullName>
    <description>RCM sets up the call reason for a list of identified TS Call Cycle</description>
    <label>Business Determined Call Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>