unpackaged/main/default/objects/Account/fields/Business_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Business_Email_Address__c</fullName>
    <label>Business Email Address</label>
    <type>Email</type>
</CustomField>