unpackaged/main/default/objects/Account/fields/Call_Cycle_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Call_Cycle_Ranking__c</fullName>
    <label>Call Cycle Ranking</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>