unpackaged/main/default/objects/Account/fields/Call_Priority__c.field-meta.xml
<CustomField>
    <fullName>Call_Priority__c</fullName>
    <description>Call Priority for call cycle algorithm</description>
    <label>Call Priority</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>