unpackaged/main/default/objects/Account/fields/Call_Reason__c.field-meta.xml
<CustomField>
    <fullName>Call_Reason__c</fullName>
    <description>Call reason call cycle algorithm</description>
    <label>Call Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>