unpackaged/main/default/objects/Account/fields/Child_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Child_Rebate__c</fullName>
    <formula>IF(Parent.Rebate__c, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Child Rebate</label>
    <type>Checkbox</type>
</CustomField>