unpackaged/main/default/objects/Account/fields/Consolidated_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Consolidated_Invoices__c</fullName>
    <label>Consolidated Invoices</label>
    <length>255</length>
    <type>Text</type>
</CustomField>