unpackaged/main/default/objects/Account/fields/Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_First_Name__c</fullName>
    <description>Received from PowerPass</description>
    <label>Contact First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>