unpackaged/main/default/objects/Account/fields/Contract_Group__c.field-meta.xml
<CustomField>
    <fullName>Contract_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Account for the contract group</description>
    <label>Contract Group</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contract Group Associations</relationshipLabel>
    <relationshipName>Contract_Group_Association</relationshipName>
    <type>Lookup</type>
</CustomField>