unpackaged/main/default/objects/Account/fields/Contract_Groupx__c.field-meta.xml
<CustomField>
    <fullName>Contract_Groupx__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Group</label>
    <referenceTo>Contract_Group__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>