unpackaged/main/default/objects/Account/fields/Contract_Notice_Period__c.field-meta.xml
<CustomField>
    <fullName>Contract_Notice_Period__c</fullName>
    <label>Contract Notice Period</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>