unpackaged/main/default/objects/Account/fields/Cordell_Builder_ID__c.field-meta.xml
<CustomField>
    <fullName>Cordell_Builder_ID__c</fullName>
    <externalId>true</externalId>
    <label>Cordell Builder ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>