unpackaged/main/default/objects/Account/fields/CPL_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>CPL_Error_Message__c</fullName>
    <label>CPL Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>