unpackaged/main/default/objects/Account/fields/CPS_Callout_Successful_SpendBand__c.field-meta.xml
<CustomField>
    <fullName>CPS_Callout_Successful_SpendBand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CPS Callout Successful SpendBand</label>
    <type>Checkbox</type>
</CustomField>