unpackaged/main/default/objects/Account/fields/Credit_Limit_Increased_Check__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Increased_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use as a flag to control task creation when credit limit increased</description>
    <label>Credit Limit Increased Check</label>
    <type>Checkbox</type>
</CustomField>