unpackaged/main/default/objects/Account/fields/Current_User_Is_Owner_of_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Current_User_Is_Owner_of_Parent_Account__c</fullName>
    <formula>IF(
 $User.Id =  Parent.OwnerId,
true,
false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User Is Owner of Parent Account</label>
    <type>Checkbox</type>
</CustomField>