unpackaged/main/default/objects/Account/fields/Currently_Shopping_At__c.field-meta.xml
<CustomField>
    <fullName>Currently_Shopping_At__c</fullName>
    <label>Currently Shopping At</label>
    <length>255</length>
    <type>Text</type>
</CustomField>