unpackaged/main/default/objects/Account/fields/Customer_Tier__c.field-meta.xml
<CustomField>
    <fullName>Customer_Tier__c</fullName>
    <description>Tier the customer belongs to</description>
    <label>Customer Tier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TIER 1</fullName>
            </value>
            <value>
                <fullName>TIER 2</fullName>
            </value>
            <value>
                <fullName>TIER 3</fullName>
            </value>
            <value>
                <fullName>TIER 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>