unpackaged/main/default/objects/Account/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>This is mapped from Company Description on leads and is on all layouts</description>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>