unpackaged/main/default/objects/Account/fields/Digital_Managed__c.field-meta.xml
<CustomField>
    <fullName>Digital_Managed__c</fullName>
    <description>Use in pilot of Predictive Model</description>
    <inlineHelpText>Use in pilot of Predictive Model</inlineHelpText>
    <label>Digital Managed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FALSE</fullName>
            </value>
            <value>
                <fullName>TRUE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>