unpackaged/main/default/objects/Account/fields/Digitally_Managed__c.field-meta.xml
<CustomField>
    <fullName>Digitally_Managed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Digitally Managed</label>
    <type>Checkbox</type>
</CustomField>