unpackaged/main/default/objects/Account/fields/Digitally_Managed_AE__c.field-meta.xml
<CustomField>
    <fullName>Digitally_Managed_AE__c</fullName>
    <description>Predictive Model from Account Extension</description>
    <formula>TEXT(Account_Extension__r.Digitally_Managed__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Predictive Model from Account Extension</inlineHelpText>
    <label>Digitally Managed</label>
    <type>Text</type>
</CustomField>