unpackaged/main/default/objects/Account/fields/Do_Not_Call_Reason__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Call_Reason__c</fullName>
    <description>Dependent picklist on Do not Call Checkbox</description>
    <label>Do Not Call Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Do_Not_Call__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Customer Requested</fullName>
            </value>
            <value>
                <fullName>Incorrect Details</fullName>
            </value>
            <value>
                <fullName>Secondary Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>