unpackaged/main/default/objects/Account/fields/Duplicate_Active_Customer_Price_List__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Active_Customer_Price_List__c</fullName>
    <description>Count the number of duplicate CPL where Status is Active</description>
    <inlineHelpText>Count the number of duplicate CPL where Status is Active</inlineHelpText>
    <label>Duplicate Active Customer Price List</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>