unpackaged/main/default/objects/Account/fields/Employer_ABN__c.field-meta.xml
<CustomField>
    <fullName>Employer_ABN__c</fullName>
    <label>Employer ABN</label>
    <length>13</length>
    <type>Text</type>
</CustomField>