unpackaged/main/default/objects/Account/fields/Employer_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Employer_Contact_Number__c</fullName>
    <label>Employer Contact Number</label>
    <type>Phone</type>
</CustomField>