unpackaged/main/default/objects/Account/fields/Employer_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Employer_Email_Address__c</fullName>
    <label>Employer Email Address</label>
    <type>Email</type>
</CustomField>