unpackaged/main/default/objects/Account/fields/Employer_Name_School_Name__c.field-meta.xml
<CustomField>
    <fullName>Employer_Name_School_Name__c</fullName>
    <description>Employment name or School attended</description>
    <label>Employer Name/School Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>