unpackaged/main/default/objects/Account/fields/Employer_NZBN__c.field-meta.xml
<CustomField>
    <fullName>Employer_NZBN__c</fullName>
    <label>Employer NZBN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>