unpackaged/main/default/objects/Account/fields/Employer_PP_Number__c.field-meta.xml
<CustomField>
    <fullName>Employer_PP_Number__c</fullName>
    <label>Employer PP Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>