unpackaged/main/default/objects/Account/fields/Estimated_Yearly_Spend__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Yearly_Spend__c</fullName>
    <label>Estimated Yearly Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>