unpackaged/main/default/objects/Account/fields/Family_Tree_Discount_Approval__c.field-meta.xml
<CustomField>
    <fullName>Family_Tree_Discount_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Family Tree Discount Approval</label>
    <type>Checkbox</type>
</CustomField>