unpackaged/main/default/objects/Account/fields/Family_Tree_Discount_Changed__c.field-meta.xml
<CustomField>
    <fullName>Family_Tree_Discount_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When Family Tree Discount change</description>
    <label>Family Tree Discount Changed</label>
    <type>Checkbox</type>
</CustomField>