unpackaged/main/default/objects/Account/fields/First_Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Transaction_Date__c</fullName>
    <description>The date of the Account&#39;s first transaction.</description>
    <label>First Transaction Date</label>
    <type>Date</type>
</CustomField>