unpackaged/main/default/objects/Account/fields/Franchise__c.field-meta.xml
<CustomField>
    <fullName>Franchise__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Franchise</label>
    <type>Checkbox</type>
</CustomField>