unpackaged/main/default/objects/Account/fields/Has_Child_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Has_Child_Accounts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checks if this account has childern accounts or not</description>
    <label>Has Child Accounts</label>
    <type>Checkbox</type>
</CustomField>