unpackaged/main/default/objects/Account/fields/Home_Store__c.field-meta.xml
<CustomField>
    <fullName>Home_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Home Store</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>