unpackaged/main/default/objects/Account/fields/Home_Store_Location_Code__c.field-meta.xml
<CustomField>
    <fullName>Home_Store_Location_Code__c</fullName>
    <formula>Home_Store__r.Location_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Home Store Location Code</label>
    <type>Text</type>
</CustomField>