unpackaged/main/default/objects/Account/fields/Home_Store_Name__c.field-meta.xml
<CustomField>
    <fullName>Home_Store_Name__c</fullName>
    <description>The name of the home store</description>
    <formula>IF(
NOT(ISBLANK(Assigned_Store__c)),
Assigned_Store__r.Name,
Home_Store__r.Name)</formula>
    <label>Home Store Name</label>
    <type>Text</type>
</CustomField>