unpackaged/main/default/objects/Account/fields/Include_in_Call_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Call_Cycle__c</fullName>
    <label>Include in Call Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accept</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>