unpackaged/main/default/objects/Account/fields/Integration_Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Integration_Failure_Reason__c</fullName>
    <label>Integration Failure Reason</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>