unpackaged/main/default/objects/Account/fields/Is_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Is_Account_Owner__c</fullName>
    <formula>IF($User.Id = OwnerId, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Account Owner?</label>
    <type>Checkbox</type>
</CustomField>