unpackaged/main/default/objects/Account/fields/Is_Lead_Converted__c.field-meta.xml
<CustomField>
    <fullName>Is_Lead_Converted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Lead Converted?</label>
    <type>Checkbox</type>
</CustomField>