unpackaged/main/default/objects/Account/fields/Is_Owner_Logged_in_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Owner_Logged_in_User__c</fullName>
    <description>This is used for filtering visibility and validation rules.</description>
    <formula>IF($User.Id = Owner.Id, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Owner Logged in User</label>
    <type>Checkbox</type>
</CustomField>