unpackaged/main/default/objects/Account/fields/Is_Valid__c.field-meta.xml
<CustomField>
    <fullName>Is_Valid__c</fullName>
    <formula>IF(
	OR(
		ISPICKVAL( Type , &#39;CREDIT&#39;),
		ISPICKVAL( Type , &#39;30DAY&#39;)
	),
	true,
	false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Valid</label>
    <type>Checkbox</type>
</CustomField>