unpackaged/main/default/objects/Account/fields/Items_Currently_Purchased_Elsewhere__c.field-meta.xml
<CustomField>
    <fullName>Items_Currently_Purchased_Elsewhere__c</fullName>
    <description>Products that were bought on other stores</description>
    <label>Items Currently Purchased Elsewhere</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>