unpackaged/main/default/objects/Account/fields/Key_Shopping_Categories__c.field-meta.xml
<CustomField>
    <fullName>Key_Shopping_Categories__c</fullName>
    <label>Key Shopping Categories</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>