unpackaged/main/default/objects/Account/fields/Last_3_Month_Sales__c.field-meta.xml
<CustomField>
    <fullName>Last_3_Month_Sales__c</fullName>
    <label>Last 3 Month Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>