unpackaged/main/default/objects/Account/fields/Last_3_Months_Trend__c.field-meta.xml
<CustomField>
    <fullName>Last_3_Months_Trend__c</fullName>
    <description>Used in AM Call Cycle</description>
    <label>Last 3 Months Trend</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No spend</fullName>
            </value>
            <value>
                <fullName>Spend</fullName>
            </value>
            <value>
                <fullName>Accelerating</fullName>
                <isActive>false</isActive>
                <label>Accelerating</label>
            </value>
            <value>
                <fullName>Decelerating</fullName>
                <isActive>false</isActive>
                <label>Decelerating</label>
            </value>
            <value>
                <fullName>Up and Down</fullName>
                <isActive>false</isActive>
                <label>Up and Down</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>